fixing string casting